fixing jumpy insertion on iOS: no animation

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,8 +4,12 @@ body {
     background: #CCC;
 }
 
+#chatCtrl {
+    height: 330px;
+}
+
 #chat {
-    height: 220px;
+    min-height: 120px;
     right: 10px;
     left: 30px;
     background: #AAA;
@@ -49,8 +53,6 @@ body {
 
 #footer {
     color: #EEE;
-    position: absolute;
-    top: 260px;
     width: 400px;
     height: 34px;
     font-weight: bold;
@@ -58,25 +60,6 @@ body {
     background: #666;
 }
 
-.fadeIn-show {
-    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.0s;
-    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.0s;
-    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.0s;
-    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.0s;
-}
-
-.fadeIn-show {
-    opacity:0;
-}
-.fadeIn-show.fadeIn-show-active {
-    opacity:1;
-}
-.fadeIn-hide {
-    opacity:1;
-}
-.fadeIn-hide.fadeIn-hide-active {
-    opacity:0;
-}
 #roomSelect {
     width: 80px;
 }
